--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -28,15 +28,9 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
                          $debugMessage
                   </div>
 #end
-	<input id="excludeDays" type="hidden" value="$excludeDays" />
-	<input id="isColoring" type="hidden" value="$isColoring" />
-	<input id="loggedDays" type="hidden" value="$loggedDays" />
-	<input id="isDurationSelected" type="hidden" value="$isDurationSelected" />
-	<input id="projectsId" type="hidden" value="$projectsId" />
-	<input id="isPopup" type="hidden" value="$isPopup" />
-	<input id="jiraMainVersion" type="hidden" value="$jiraMainVersion" />
-	<input id="issueKey" type="hidden" value="$issueKey" />
-	<input id="comment" type="hidden" value="$comment" />
+
+	
+	
 <form name="jttpForm" id="jttpForm" method="post"
                     #if($isEdit) action="JiraTimetrackerWebAction.jspa?editedWorklogId=$editedWorklogId&dateFormatted=$dateFormatted" 
                     #elseif($isEditAll) action="JiraTimetrackerWebAction.jspa?editAllIds=$editAllIds&dateFormatted=$dateFormatted" 
@@ -47,17 +41,30 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
     #else
         #set ($firstDay = 0)
     #end
+<input id="firstDay" type="hidden" value="$firstDay" />
+<input id="dateFormatted" type="hidden" value="$dateFormatted" />
+<input id="currentCalendar" type="hidden" value="$currentCalendar" />
+<input id="excludeDays" type="hidden" value="$excludeDays" />
+<input id="isColoring" type="hidden" value="$isColoring" />
+<input id="loggedDays" type="hidden" value="$loggedDays" />
+<input id="isDurationSelected" type="hidden" value="$isDurationSelected" />
+<input id="projectsId" type="hidden" value="$projectsId" />
+<input id="isPopup" type="hidden" value="$isPopup" />
+<input id="jiraMainVersion" type="hidden" value="$jiraMainVersion" />
+<input id="issueKey" type="hidden" value="$issueKey" />
+<input id="comment" type="hidden" value="$comment" />
+<input id="isEditAll" type="hidden" value="$isEditAll" />
 
-    <div id="plugin_head" class="item-header" style="width:980px;">
-            <div style="float: right;">
+    <div id="plugin_head" class="item-header" >
+            <div class="logo-img">
                 <a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
-                    <img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
+                    <img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42">
                 </a>
             </div>
-             <h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
+             <h1 class="item-summary" >Timetracker</h1>
       </div>
-    <div id="main-content" class="content rounded" style="width:970px;">
-        <div style="margin:10px; width:970px;">
+    <div id="main-content" class="content rounded">
+        <div class="inside-content">
             ##TAB START
             <div class="tabwrap tabs2" id="tabs-jttp">
                 <ul class="tabs horizontal">
@@ -87,54 +94,49 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
                             <table>
                                         <tbody>
                                             <tr>
-                                                <td style="width: 110px;">
-                                                    <div class="field-group" style="width: 95px;">
-                                                           $i18n.getText("plugin.start.time") <img src="$contextPath/images/required.png" width="16" height="16" border="0" />
-                                                   </div>
+                                                <td class="worklog-table-header-column">
+                                                    <div>
+                                                        $i18n.getText("plugin.start.time") <img src="$contextPath/images/required.png" width="16" height="16" border="0" />
+                                                    </div>
                                                 </td>
-                                                <td>
-                                                </td>
-                                                <td style="width: 110px;">
-                                                    <div style="width: 110px;" >
+												<td />
+                                                <td class="worklog-table-header-column">
+                                                    <div>
                                                         <input id="radioEnd" type="radio" name="endOrDuration" value="end" checked="true" style="display: none;"> 
                                                         $i18n.getText("plugin.end.time")
                                                     </div>
                                                 </td>
-                                                <td>
-                                                </td>
-                                                <td style="width: 120px">
-                                                    <div style="width: 120px;" >
+												<td />
+                                                <td class="worklog-table-header-column">
+                                                    <div>
                                                         <input id="radioDuration" type="radio" name="endOrDuration" value="duration" style="display: none;">
                                                         $i18n.getText("plugin.duration.time")
                                                     </div>
                                                 </td>
-                                                 <td width="auto">
-                                                </td>
                                             </tr>
                                             <tr>
-                                                <td  style="width: 110px;">
-                                                   <input id="startTime"  type="text" name="startTime" value="$startTime" onkeypress="handleEnterKey(event, '#endTime');" tabindex="1" style="margin-right: 5px; width: 100px;"/>
+                                                <td class="worklog-table-header-column">
+                                                   <input id="startTime"  type="text" name="startTime" value="$startTime" onkeypress="handleEnterKey(event, '#endTime');" tabindex="1" class="time-input"/>
                                                 </td>
-                                                <td style="width: 110px;">
-                                                   <input id="startNow"  type="button" name="startNow" value="$i18n.getText('plugin.now')" class="button" style="width: 40px;" onclick="startNowClick($startTimeChange);"/>
+                                                <td class="worklog-table-header-column">
+                                                   <input id="startNow"  type="button" name="startNow" value="$i18n.getText('plugin.now')" class="button" onclick="startNowClick($startTimeChange);"/>
                                                 </td>
-                                                <td  style="width: 110px">
-                                                    <span style="position:relative;">
-                                                         <input id="endTime"  type="text" name="endTime" value="$endTime" onkeypress="handleEnterKey(event, '#issueSelect-textarea');" tabindex="2" style="margin-right: 5px; width: 100px;"/> 
-                                                         <div id="endTimeInput" style="position:absolute; left:0; right:0; top:0; bottom:0;" onclick="endTimeInputClick($isEditAll);"></div>
+                                                <td  class="worklog-table-header-column">
+												  <span class="time-input-span">
+                                                         <input id="endTime"  type="text" name="endTime" value="$endTime" onkeypress="handleEnterKey(event, '#issueSelect-textarea');" tabindex="2" class="time-input"/> 
+                                                         <div id="endTimeInput" class="time-input-div" onclick="endTimeInputClick($isEditAll);"></div>
                                                       </span>
                                                  </td>
-                                                 <td style="width: 85px;">
-                                                   <input id="endNow"  type="button" name="endNow" value="$i18n.getText('plugin.now')" class="button" style="width: 40px;" onclick="endNowClick();"/>
+                                                 <td class="worklog-table-header-column">
+                                                   <input id="endNow"  type="button" name="endNow" value="$i18n.getText('plugin.now')" class="button" onclick="endNowClick();"/>
                                                  </td>
-                                                 <td  style="width: 120px" >
-                                                  <span style="position:relative;">
-                                                     <input id="durationTime"  type="text" name="durationTime" onkeypress="handleEnterKey(event, '#issueSelect-textarea');" tabindex="2" disabled value="$durationTime" style="width: 100px"/>
-                                                    <div id="durationTimeInput" style="position:absolute; left:0; right:0; top:0; bottom:0;" onclick="durationTimeInput($isEditAll);"></div>
+                                                 <td class="worklog-table-header-column" >
+                                                  <span class="time-input-span">
+                                                     <input id="durationTime"  type="text" name="durationTime" onkeypress="handleEnterKey(event, '#issueSelect-textarea');" tabindex="2" disabled value="$durationTime" class="time-input"/>
+                                                    <div id="durationTimeInput" class="time-input-div" onclick="durationTimeInput($isEditAll);"></div>
                                                   </span>
                                                  </td>
-                                                <td width="auto">
-                                                </td>
+                                                <td />
                                             </tr>
                                             <tr>
                                                 <td colspan="6">
@@ -171,39 +173,30 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
                                     </table>     
                                 </td>
                                 <td>
-                                    <div id="not_popup_calendar" style="float: right;">
-                                        #if($isPopup != 1)
-                                            <script>
-                                            ##This is the not popup calendar. Works but not nice
-                                            Calendar.setup({
-                                                firstDay : $firstDay,
-                                                date : '$dateFormatted',
-                                                align : 'Br',
-                                                singleClick : true,
-                                                showOthers: true,
-                                                flat: 'not_popup_calendar',
-                                                flatCallback: dateChanged,
-                                                useISO8601WeekNumbers : $currentCalendar.useISO8601,
-                                                ifFormat : '%Y-%m-%d'
-                                            });
-                                            function dateChanged(calendar)
-                                              {
-                                                  document.getElementById("date").value=calendar.date.print(calendar.params.ifFormat);
-                                                  jQuery(document.getElementById("date")).change();
-                                              };
-                                            
-                                            </script>
-                                            ##Turn off the calendar shadow
-                                            <style type="text/css">
-                                                div.calendar {
-                                                    -moz-box-shadow: 0px 0px 0px #666;
-                                                    -webkit-box-shadow: 0px 0px 0px #666;
-                                                    box-shadow: 0px 0px 0px #666;
-                                                    z-index: inherit;
-                                                }
-                                            </style>
-                                        #end
-                                    </div>
+                                    <div id="not_popup_calendar" class="not_popup_calendar">
+									#if($isPopup != 1)
+						            		<script>
+											##This is the not popup calendar. Works but not nice
+											Calendar.setup({
+												firstDay : $firstDay,
+												date : '$dateFormatted',
+												align : 'Br',
+												singleClick : true,
+												showOthers: true,
+												flat: 'not_popup_calendar',
+												flatCallback: dateChanged,
+												useISO8601WeekNumbers : $currentCalendar.useISO8601,
+												ifFormat : '%Y-%m-%d'
+											});
+											function dateChanged(calendar)
+											  {
+											      document.getElementById("date").value=calendar.date.print(calendar.params.ifFormat);
+											      jQuery(document.getElementById("date")).change();
+											  };
+											
+											</script>
+									#end
+									</div>
                                 </td>
                 </tbody>
             </table>
@@ -211,23 +204,12 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
                 <input id="Edit"  type="submit" name="edit" value="$i18n.getText('plugin.save')" class="button" tabindex="5" />
             #elseif($isEditAll)
                 <input id="editallsave"  type="submit" name="editallsave" value="$i18n.getText('plugin.save')" class="button" />    
-                ##set input fields disable
-                <script>
-                document.getElementById("startTime").disabled= true;
-                document.getElementById("startNow").disabled= true;
-                document.getElementById("endTime").disabled= true;
-                document.getElementById("endNow").disabled= true;
-                document.getElementById("durationTime").disabled= true;
-                document.getElementById("issueSelect-textarea").disabled= true;
-                document.getElementById("issueSelect-textarea").disabled= true;
-                document.getElementById("comments").disabled= true;
-                </script>
             #else
-                <input type="hidden" id="Submit" name="submit" disabled/>
+                <input type="hidden" id="Submit" name="submit" disabled />
                 <input id="Submitbutton" type="submit" name="submitbutton" value="$i18n.getText('plugin.submit')" class="button" tabindex="5"
-                    onclick="AJS.$('#Submit').val('true');AJS.$('#Submit').attr('disabled', false);"/>
+                    onclick="submitButtonClick();"/>
             #end
-            <input id="setting"  type="button" name="setting" onclick="location.href='JiraTimetrackerSettingsWebAction!default.jspa'" value="$i18n.getText('plugin.settings')" class="button" style="display: inline; float: right;"/>
+            <input id="setting"  type="button" name="setting" onclick="location.href='JiraTimetrackerSettingsWebAction!default.jspa'" value="$i18n.getText('plugin.settings')" class="button settings-button" />
             <input id="cancelButton"  type="button" name="Cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='JiraTimetrackerWebAction!default.jspa?dateFormatted=$dateFormatted'" class="button"/>
             </div>
         </div>    
