--- a/src/main/resources/templates/list.vm
+++ b/src/main/resources/templates/list.vm
@@ -21,7 +21,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	    <table class="grid" border="0" cellpadding="2" cellspacing="0" width="100%">
 	              <thead>
 	                   <tr class="rowHeader">
-	                       <td width="10%" style="text-align: center;" title="$i18n.getText('jttp.list.title.issue')">
+	                       <td width="10%" class="center-text" title="$i18n.getText('jttp.list.title.issue')">
 	                           Issue
 	                        </td>
 	                        <td class="label-row">
@@ -39,24 +39,33 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	                        <td width="60%">
 	                          $i18n.getText("plugin.note")
 	                        </td>
-	                        <td width="10%" style="text-align: center;" title="$i18n.getText('jttp.list.title.actions')">
+	                        <td width="10%" class="center-text" title="$i18n.getText('jttp.list.title.actions')">
 	                          $i18n.getText("plugin.actions")
 	                        </td>
 	                    </tr>
                     </thead>
                     #if($worklogs.size() == 0)
             			</table>
-            			<div id="message" style="text-align: center; padding: 3px; font-size: 14px;">
+            			<div id="message" style="center-text padding: 3px; font-size: 14px;">
 				 			$i18n.getText("plugin.no.worklogs")
 					  	</div>
                     #else
                     	<tbody id="issueTable">
 		                   	#foreach ($worklog in $worklogs)
 		                    	<tr #if($worklog.worklogId == $editedWorklogId) class="rowEdit" #end #if($rowCount % 2 != 0) class="rowAlter" #end>
-		                    	 	<td class="table-issue" style="vertical-align: middle;">
+		                    	 	<td class="table-issue" class="vertically-middle">
 		                    	 		<a href="/browse/$worklog.issue" class="issue-link" title="#if($worklog.issueParent != '') $i18n.getText('plugin.parent.issue') $worklog.issueParent &#13 $worklog.issueSummary #else $worklog.issueSummary #end">$worklog.issue</a>
 		                    	 	</td>
-		                    	 	<td style="vertical-align: middle;">
+		                    	 	<td class="table-starttime" class="vertically-middle">
+		                    	 		$worklog.startTime
+		                    	 	</td>
+		                    	 	<td class="table-endtime" class="vertically-middle">
+		                    	 		$worklog.endTime
+		                    	 	</td>
+		                    	 	<td class="vertically-middle">
+		                    	 		$worklog.duration
+		                    	 	</td>
+									<td class="vertically-middle">
 		                    	 		#if(!$worklog.isMoreEstimatedTime)
 		                    	 			<div style="color:red;">$worklog.remaining</div>
 										#else
@@ -64,16 +73,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 										#end
 		                    	 		
 		                    	 	</td>
-		                    	 	<td class="table-starttime" style="vertical-align: middle;">
-		                    	 		$worklog.startTime
-		                    	 	</td>
-		                    	 	<td class="table-endtime" style="vertical-align: middle;">
-		                    	 		$worklog.endTime
-		                    	 	</td>
-		                    	 	<td style="vertical-align: middle;">
-		                    	 		$worklog.duration
-		                    	 	</td>
-		                    	 	<td id="commentRow_$rowCount" name="commentRow_$rowCount" class="table-comment wiki-edit-content" style="vertical-align: middle;">
+		                    	 	<td id="commentRow_$rowCount" name="commentRow_$rowCount" class="table-comment wiki-edit-content" class="vertically-middle">
 		                    	 		<input id="hiddenWorklogBody" type="hidden" value="$worklog.body">
 		                    	 	</td>
 		                    	 	<script>
@@ -90,22 +90,19 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	                								data = data.replace('<p>','');
 	                								data = data.replace('</p>','');
 			                    	 				AJS.$("#commentRow_$rowCount").append(data);
-			                    	 				AJS.$("#commentRow_$rowCount").attr("style","vertical-align: middle;");
+			                    	 				AJS.$("#commentRow_$rowCount").attr("class","vertically-middle");
 			                    	 			}
 	            								}); 
 	            					</script>
-		                    	 	<td style="vertical-align: middle; text-align: center;>
+		                    	 	<td class="vertically-middle center-text>
 		                    	 		<input id="hiddenWorklogId" type="hidden" value="$worklog.worklogId" >
-		                    	 		<span class="aui-icon aui-icon-small aui-iconfont-edit"
+		                    	 		<span class="aui-icon aui-icon-small aui-iconfont-edit jttp-aui-icon"
 		                    	 			id="edit" name="edit" title="$i18n.getText('plugin.edit')"
-		                    	 			style="margin:3px"
 		                    	 			onclick="location.href='JiraTimetrackerWebAction.jspa?editedWorklogId=$worklog.worklogId&dateFormatted=$dateFormatted'"></span>
-		                    	 		<span class="aui-icon aui-icon-small aui-iconfont-delete"
+		                    	 		<span class="aui-icon aui-icon-small aui-iconfont-delete jttp-aui-icon"
 		                    	 			id="delete" name="delete" title="$i18n.getText('plugin.delete')"
-		                    	 			style="margin:3px"
 		                    	 			onclick="location.href='JiraTimetrackerWebAction!default.jspa?deletedWorklogId=$worklog.worklogId&dateFormatted=$dateFormatted'"></span>
-		                    	 		<span class="aui-icon aui-icon-small aui-iconfont-copy-clipboard copy"
-		                    	 			style="margin:3px"
+		                    	 		<span class="aui-icon aui-icon-small aui-iconfont-copy-clipboard copy jttp-aui-icon"
 		                    	 			id="copy" name="copy" title="$i18n.getText('plugin.copy')"></span>
 		                    	 	</td>
 		                    	</tr>
