--- a/src/main/resources/templates/missing_worklogs_report.vm
+++ b/src/main/resources/templates/missing_worklogs_report.vm
@@ -16,78 +16,6 @@
 <html>
 <head>
 <title>Timetracker Missing Days Report</title>
-## Style Declaration
-<style type="text/css">
-.grid td {
-	text-align: center;
-	vertical-align: inherit;
-}
-
-.rowHeader {
-	background-color: #E2E2E2;
-}
-
-.rowAlter {
-	background-color: #F2F2F2;
-}
-
-.button {
-	padding: 2px;
-}
-
-.grid {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
-	background-color: #FCFCFC;
-	border: 1px solid #D2D2D2;
-	border-collapse: collapse;
-}
-
-.grid th, .grid td {
-	border: 1px solid #D2D2D2;
-	padding: 4px;
-}
-
-.content {
-	margin: 0 .714em .714em;
-	position: relative;
-}
-
-.rounded {
-	background-color: #fff;
-	border: 1px solid #bbb;
-	-moz-border-radius: .4em;
-	-webkit-border-radius: .4em;
-	border-radius: .4em;
-}
-
-.item-header {
-	margin: 12px 12px 0 12px;
-	min-height: 48px;
-	position: relative;
-	padding-left: 5px;
-	padding-right: 5px;
-	padding-top: 0px;
-}
-
-#main-content {
-	min-width: 990px;
-}
-
-.item-header .item-summary {
-	font-size: 2em;
-	line-height: 1.167;
-	margin: 0;
-}
-#error_message{
-		color: white;
-		text-align: center;
-		border: 1px solid;
-		border-color: #d04437;
-		border-radius: 3px;
-		background-color: #d04437;
-	}
-</style>
 </head>
 <body>
 $webResourceManager.requireResource("jira.webresources:global-static")
@@ -95,6 +23,7 @@ $webResourceManager.requireResource("jira.webresources:calendar")
 $webResourceManager.requireResource("jira.webresources:calendar-en")
 $webResourceManager.requireResource("jira.webresources:dwr", null)
 $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
+$webResourceManager.requireResource("org.everit.jira.timetracker.plugin:table_report-resources")
 
 <form name="myForm" method="post"action="JiraTimetrackerWorklogsWebAction.jspa?dateFromFormated=$dateFromFormated&dateToFormated=$dateToFormated&actualPage=$actualPage" />
 	#set($rendererType = "atlassian-wiki-renderer")
@@ -103,16 +32,18 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	#else
 		#set ($firstDay = 0)
 	#end
-	<div id="plugin_head" class="item-header" style="width: 980px;">
-	  <div style="float: right;">
+	<input id="firstDay" type="hidden" value="$firstDay" />
+	
+	<div id="plugin_head" class="item-header">
+	  <div class="logo-img">
 	    <a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank"> <img
 	      src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png"
-	      alt="Everit logo" height="42" width="42"style:"float:right"></a>
+	      alt="Everit logo" height="42" width="42"></a>
 	  </div>
-	  <h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
+	  <h1 class="item-summary">Timetracker</h1>
 	</div>
-	<div id="main-content" class="content rounded" style="width: 970px;">
-	  <div style="margin: 10px; width: 970px;">
+	<div id="main-content" class="content rounded">
+	  <div class="inside-content">
 	    ##TAB START
 	    <div class="tabwrap tabs2" id="tabs-jttp">
 	      <ul class="tabs horizontal">
@@ -128,63 +59,17 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 			 			$i18n.getText($message) $messageParameter
 			  	</div>
 		  	#end	    
-		  	<div id="calendar_div" style="text-align: left; vertical-align: inherit; float: left; padding: 5px;">
+		<div id="calendar_div" class="jttp-calendar">
 	      <table>
 	        <tbody>
 	          <tr>
 	            <td>$i18n.getText("plugin.from") <input type="text" id="dateFrom" name="dateFrom" tabindex="1"
-	              onkeydown="return checkFromEnter(event);" value="$dateFromFormated" /> 
-	              <script>
-					function checkFromEnter(event) {
-						if (event.keyCode == 13) {
-						AJS.$("#dateTo").focus();
-						return false;
-						}
-					}
-					</script> 
-					<img id="date_trigger_from" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" style="vertical-align: sub;" title="$i18n.getText('plugin.choose.date')"/> 
-					<script>
-						var cal = Calendar
-								.setup({
-									firstDay : $firstDay,
-									inputField : 'dateFrom',
-									button : 'date_trigger_from',
-									date : '$dateFormatted',
-									align : 'Br',
-									electric: false,
-									singleClick : true,
-									showOthers: true,
-									useISO8601WeekNumbers : $currentCalendar.useISO8601,
-									ifFormat : '%Y-%m-%d'
-								});
-					</script>
+	              onkeydown="return checkEnter(event);" value="$dateFromFormated" /> 
+					<img id="date_trigger_from" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" class="jttp-calendar-img" title="$i18n.getText('plugin.choose.date')"/> 
 	            </td>
 	            <td>$i18n.getText("plugin.to") <input type="text" id="dateTo" name="dateTo" tabindex="2"
 	              onkeydown="return checkToEnter(event);" value="$dateToFormated" /> 
-	              <script>
-						function checkToEnter(event) {
-							if (event.keyCode == 13) {
-								AJS.$("#search").click();
-								return false;
-							}
-						}
-				</script> 
-				<img id="date_trigger_to" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" style="vertical-align: sub;" title="$i18n.getText('plugin.choose.date')"/> 
-	              <script>
-							var cal = Calendar
-									.setup({
-										firstDay : $firstDay,
-										inputField : 'dateTo',
-										button : 'date_trigger_to',
-										date : '$dateToFormated',
-										align : 'Br',
-										electric : false,
-										singleClick : true,
-										showOthers : true,
-										useISO8601WeekNumbers : $currentCalendar.useISO8601,
-										ifFormat : '%Y-%m-%d'
-									});
-					</script>
+				<img id="date_trigger_to" src="$contextPath/images/icons/cal.gif" width="16" height="16" border="0" alt="Pick a date" class="jttp-calendar-img" title="$i18n.getText('plugin.choose.date')"/> 
 	            </td>
 	          </tr>
 	        </tbody>
@@ -223,16 +108,14 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	        </tbody>
 	      </table>
 	    </div>
-	    <style type="text/css">
-			{margin-bottom:0em;}
-		</style>
-	    <div id="statistics-message" style="width: 30%; padding-bottom: 5px;">
-	      $i18n.getText("plugin.statistics.message") $statisticsMessageParameter</div>
+
+	    <div id="statistics-message" class="message">
+	      $i18n.getText("plugin.statistics.message") $statisticsMessageParameter
+		</div>
 	    #set($rowCount = 0)
 	    <div class="results-wrap">
 	      <div>
-	        <table class="grid" border="0" cellpadding="2" cellspacing="0" width="30%"
-	          style="text-align: center; padding-bottom: 5px;">
+	        <table class="grid" border="0" cellpadding="2" cellspacing="0" width="30%">
 	          <thead>
 	            <tr class="rowHeader">
 	              <td width="5%">$i18n.getText("plugin.dates")</td>
@@ -240,7 +123,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	          </thead>
 	          #if($showDatesWhereNoWorklog.size() == 0)
 	        </table>
-	        <div id="message" style="text-align: center; padding: 3px; font-size: 14px; width: 30%;">
+	        <div id="message" class="message">
 	          $i18n.getText("plugin.no.dates")</div>
 	        #else
 	        <tbody>
@@ -255,7 +138,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	      </div>
 	    </div>
 	    #if($showDatesWhereNoWorklog.size() != 0)
-	    <div style="text-align: center; width: 30%;">
+	    <div class="message">
 	      <input type="submit" id="pageBack" name="pageBack" value="<" class="button" /> $actualPage / $numberOfPages <input
 	        type="submit" id="pageNext" name="pageNext" value=">" class="button" />
 	    </div>
