--- a/src/main/resources/templates/chart_report.vm
+++ b/src/main/resources/templates/chart_report.vm
@@ -16,48 +16,6 @@
 <html>
 <head>
 <title>Timetracker Chart Report</title>
-## Style Declaration
-<style type="text/css">
-.button {
-        padding: 2px;
-    }
-    .content {
-		margin: 0 .714em .714em;
-		position: relative;
-	}
-    .rounded {
-		background-color: #fff;
-		border: 1px solid #bbb;
-		-moz-border-radius: .4em;
-		-webkit-border-radius: .4em;
-		border-radius: .4em;
-	}
-    .item-header {
-		margin: 12px 12px 0 12px;
-		min-height: 48px;
-		position: relative;
-		padding-left: 5px;
-		padding-right: 5px;
-		padding-top: 0px;
-	}
-	#main-content {
-		min-width: 990px;
-	}
-	.item-header .item-summary {
-		font-size: 2em;
-		line-height: 1.167;
-		margin: 0;
-	}
-	#error_message{
-		color: white;
-		text-align: center;
-		border: 1px solid;
-		border-color: #d04437;
-		border-radius: 3px;
-		background-color: #d04437;
-	}
-	
-</style>
 </head>
 $webResourceManager.requireResource("jira.webresources:global-static")
 $webResourceManager.requireResource("jira.webresources:calendar")
@@ -72,16 +30,16 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	#else
 		#set ($firstDay = 0)
 	#end
-	<div id="plugin_head" class="item-header" style="width:980px;">
-			<div style="float: right;">
+	<div id="plugin_head" class="item-header" >
+			<div class="logo-img">
 				<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
-					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
+					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42" >
 				</a>
 			</div>
- 			<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
+ 			<h1 class="item-summary">Timetracker</h1>
   	</div>
-	<div id="main-content" class="content rounded" style="width:970px;">
-		<div style="margin:10px; width:970px;">
+	<div id="main-content" class="content rounded" >
+		<div class="inside-content">
 			##TAB START
 			<div class="tabwrap tabs2" id="tabs-jttp">
 	    		<ul class="tabs horizontal">
@@ -100,7 +58,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 			 			$i18n.getText($message)
 			  	</div>
 		  	#end
-			<div id="form_div" style="text-align: left; vertical-align: inherit; padding:5px;">
+			<div id="form_div" class="jttp-calendar">
 				<table>
 					<tbody>
 						<tr>
@@ -257,7 +215,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 				</table>
 			</div>
 			#if($chartDataList && $chartDataList.size() == 0)
-				<div id="message" style="text-align: center; padding: 3px; font-size: 14px; width: 35%;" >
+				<div id="message" class="message" >
 							 			$i18n.getText("plugin.no.worklogs")
 				</div>
 				<div id="warn_message" style="text-align: center; padding: 3px; font-size: 11px; width: 35%; color: #3c78b5; font-style:italic;" >
