--- a/src/main/resources/templates/table_report.vm
+++ b/src/main/resources/templates/table_report.vm
@@ -16,7 +16,6 @@
 <html>
 <head>
 <title>Timetracker Table Report</title>
-## Style Declaration
 </head>
 $webResourceManager.requireResource("jira.webresources:global-static")
 $webResourceManager.requireResource("jira.webresources:calendar")
@@ -37,16 +36,16 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:table_re
 	<input id="dateFormatted" type="hidden" value="$dateFormatted" />
 	<input id="firstDay" type="hidden" value="$firstDay" />
 	
-	<div id="plugin_head" class="item-header" style="width:980px;">
-			<div style="float: right;">
+	<div id="plugin_head" class="item-header">
+			<div class="logo-img">
 				<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
-					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
+					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:everit_tt_logo/everit_tt_logo.png" alt="Everit logo" height="42" width="42" >
 				</a>
 			</div>
- 			<h1 class="item-summary" style="display: inline-block; padding-top: 6px;">Timetracker</h1>
+ 			<h1 class="item-summary">Timetracker</h1>
   	</div>
-	<div id="main-content" class="content rounded" style="width:970px;">
-		<div style="margin:10px; width:970px;">
+	<div id="main-content" class="content rounded">
+		<div class="inside-content">
 			##TAB START
 			<div class="tabwrap tabs2" id="tabs-jttp">
 	    		<ul class="tabs horizontal">
@@ -62,7 +61,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:table_re
 			 			$i18n.getText($message)
 			  	</div>
 		  	#end
-			<div id="form_div" style="text-align: left; vertical-align: inherit; padding:5px;">
+			<div id="form_div" class="jttp-calendar">
 				<table>
 					<tbody>
 						<tr>
