--- a/src/main/resources/templates/table_report_list.vm
+++ b/src/main/resources/templates/table_report_list.vm
@@ -103,7 +103,7 @@ margin-bottom: 0em;
 		                    	 	<td class="table-starttime" style="vertical-align: middle;">
 			                    	 		$worklog.startDate
 		                    	 	</td>
-		                    	 	<td class="table-issue" style="vertical-align: middle;">
+		                    	 	<td class="table-issue" style="vertical-align: middle; #if($worklog.isClosed) text-decoration: line-through; #end">
 		                    	 		<a href="/browse/$worklog.issue" class="issue-link" title="#if($worklog.issueParent != '') $i18n.getText('plugin.parent.issue') $worklog.issueParent &#13 $worklog.issueSummary #else $worklog.issueSummary #end">$worklog.issue</a>
 		                    	 		
 		                    	 		#if(!$worklog.isMoreEstimatedTime)
