Changed remainig column text color.

--- a/src/main/resources/templates/list.vm
+++ b/src/main/resources/templates/list.vm
@@ -69,7 +69,7 @@ cursor:pointer;
 		                    	 	</td>
 		                    	 	<td style="vertical-align: middle;">
 		                    	 		#if($worklog.isClosed)
-		                    	 			<div title="$worklog.exactRemaining" style="color: #808080;">$worklog.roundedRemaining</div>
+		                    	 			<div title="$worklog.exactRemaining" style="color: #A3A1A1;">$worklog.roundedRemaining</div>
 		                    	 		#elseif($worklog.isMoreEstimatedTime)
 											<div title="$worklog.exactRemaining">$worklog.roundedRemaining<div>
 										#else
