--- a/src/main/resources/templates/table_report.vm
+++ b/src/main/resources/templates/table_report.vm
@@ -248,8 +248,20 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 						</tr>
 						<tr>
 							<td>
-								<input id="search"  tabindex="3" type="submit" name="search" value="$i18n.getText('plugin.search')" class="button" />
+								<input id="search"  tabindex="3" type="submit" name="search" value="$i18n.getText('plugin.search')" class="button" 
+								  onclick="searchOnClick();"/>
 							</td>
+							<script>
+								function searchOnClick(){
+									var loggedUserIn = AJS.params.loggedInUser;
+									var selectedUser = document.getElementById("userPicker").value;
+									if(loggedUserIn == selectedUser){
+										_paq.push(['trackEvent', 'User', 'MyTable']);
+									}else{
+										_paq.push(['trackEvent', 'User', 'OthersTable']);
+									}
+								}
+							</script>
 						</tr>
 					</tbody>
 				</table>
