--- a/src/main/resources/templates/settings.vm
+++ b/src/main/resources/templates/settings.vm
@@ -81,7 +81,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 <form name="settingsForm"  method="post" action="JiraTimetrackerSettingsWebAction.jspa"/>   
 	<div id="plugin_head" class="item-header" style="width:980px;">
  			<div style="float: right;">
-				<a href="http://www.everit.org/jira-timetracker-plugin/" target="_blank">
+				<a href="http://www.everit.biz/" target="_blank">
 					<img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:jttp-resources/everit_tt_logo.png" alt="Everit logo" height="42" width="42" style:"float: right">
 				</a>
 			</div>
