Refactored reporting js method. Added jttp prefix to js methods.

--- a/src/main/resources/templates/chart_report.vm
+++ b/src/main/resources/templates/chart_report.vm
@@ -252,7 +252,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 						<tr>
 							<td>
 								<input id="search"  tabindex="3" type="submit" name="search" value="$i18n.getText('plugin.search')" class="button" 
-								  onclick="searchOnClick('Chart');"/>
+								  onclick="jttpSearchOnClick('Chart');"/>
 							</td>
 						</tr>
 					</tbody>
