--- a/src/main/resources/templates/table_report.vm
+++ b/src/main/resources/templates/table_report.vm
@@ -249,7 +249,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 						<tr>
 							<td>
 								<input id="search"  tabindex="3" type="submit" name="search" value="$i18n.getText('plugin.search')" class="button" 
-								  onclick="searchOnClick('Table');"/>
+								  onclick="jttpSearchOnClick('Table');"/>
 							</td>
 						</tr>
 					</tbody>
